--- a/public/style.css
+++ b/public/style.css
@@ -113,6 +113,8 @@ body {
 
 .caixa_consulta {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     gap: 10px;
     width: 100%;
@@ -140,6 +142,23 @@ body {
     background-color: #ffffff22;
     padding: 10px;
     border-radius: 10px;
+}
+
+.input_mensagem_alterar{
+    width: 100%;
+    max-width: 300px;
+    padding: 8px;
+    border: none;
+    border-radius: 6px;
+    font-size: 14px;
+}
+
+.rodape{
+    display: flex;
+    align-items:first baseline;
+    justify-content: end;
+    padding:5% 1%;
+  
 }
 
 /* 📱 Responsivo: layout em coluna para telas menores */
@@ -171,4 +190,45 @@ body {
     .consultas {
         padding: 20px;
     }
+
+    .input_mensagem_alterar{
+        width: 100%;
+        height: 100px;
+        max-width: 300px;
+        padding: 8px;
+        border: none;
+        border-radius: 6px;
+        font-size: 14px;
+    }
+
+    .botoes_alteracao{
+        display: flex;
+        flex-direction: row; 
+        gap: 10px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    .botoes_alteracao .botao_principal {
+        flex: 1;
+        width: 100%;
+        font-size: 14px;
+    }
+
+    .rodape{
+        display: flex;
+        align-items:first baseline;
+        justify-content: end;
+        padding:5% 1%;
+      
+    }
+
+    .mensagem_rodape{
+        font-size: 11px;
+    }
+
+    .caixa_consulta button#btn_consultar {
+        width: 70%;
+    }
+    
 }
